[gd_scene load_steps=13 format=3 uid="uid://3l0k1cn63ahd"]

[ext_resource type="Script" uid="uid://cukrup6mhkvhw" path="res://game/player/player.gd" id="1_d5iul"]
[ext_resource type="PackedScene" uid="uid://dtvo18gjrm7my" path="res://game/entity/entity.tscn" id="1_r625f"]
[ext_resource type="Texture2D" uid="uid://byjbep0gi5cm3" path="res://game/player/vfx/drop.png" id="3_8a6xh"]
[ext_resource type="Texture2D" uid="uid://d2j3okv8l0sm3" path="res://game/player/control_indicator.png" id="3_fptox"]
[ext_resource type="Script" uid="uid://rxv23ocf5pex" path="res://game/player/player_input.gd" id="3_knbu5"]
[ext_resource type="PackedScene" uid="uid://bp6v2plelkof8" path="res://game/player/vfx/blood_hurt_vfx.tscn" id="3_tk865"]
[ext_resource type="PackedScene" uid="uid://ctqgs3w1llfuf" path="res://game/player/vfx/blood_death_vfx.tscn" id="4_nsvnj"]
[ext_resource type="Texture2D" uid="uid://bk76lmnl8rml0" path="res://game/events/common/minimap/marker.png" id="8_05q0u"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1t0v5"]
properties/0/path = NodePath(".:direction")
properties/0/spawn = false
properties/0/replication_mode = 1
properties/1/path = NodePath(".:shooting")
properties/1/spawn = false
properties/1/replication_mode = 2
properties/2/path = NodePath(".:aim_direction")
properties/2/spawn = false
properties/2/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_r6igu"]
properties/0/path = NodePath(".:id")
properties/0/spawn = true
properties/0/replication_mode = 0
properties/1/path = NodePath(".:team")
properties/1/spawn = true
properties/1/replication_mode = 0
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 0
properties/3/path = NodePath(".:server_position")
properties/3/spawn = false
properties/3/replication_mode = 1
properties/4/path = NodePath(".:equip_data")
properties/4/spawn = true
properties/4/replication_mode = 0
properties/5/path = NodePath(".:player_name")
properties/5/spawn = true
properties/5/replication_mode = 0
properties/6/path = NodePath(".:skill_vars")
properties/6/spawn = true
properties/6/replication_mode = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_i6vnq"]
radius = 76.0

[sub_resource type="Gradient" id="Gradient_bfbq1"]
offsets = PackedFloat32Array(0, 0.125, 0.5, 0.75)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 40

[node name="Player" groups=["Player"] instance=ExtResource("1_r625f")]
script = ExtResource("1_d5iul")
magic = 200.0
hurt_vfx_scene = ExtResource("3_tk865")
death_vfx_scene = ExtResource("4_nsvnj")

[node name="Input" parent="." index="0"]
replication_interval = 0.02
replication_config = SubResource("SceneReplicationConfig_1t0v5")
script = ExtResource("3_knbu5")

[node name="Synchronizer" parent="." index="1"]
replication_config = SubResource("SceneReplicationConfig_r6igu")

[node name="Name" type="Node2D" parent="." index="2"]
z_index = 14
position = Vector2(0, -120)

[node name="Label" type="Label" parent="Name" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -17.0
offset_right = 88.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Player"
horizontal_alignment = 1

[node name="CollisionShape2D" parent="." index="3"]
shape = SubResource("CircleShape2D_i6vnq")

[node name="ControlIndicator" type="Sprite2D" parent="." index="4"]
visible = false
z_index = 15
position = Vector2(0, 96)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_fptox")
offset = Vector2(0, 32)

[node name="Skin" type="Node2D" parent="Visual" index="0"]

[node name="Blood" type="CPUParticles2D" parent="Visual" index="1"]
position = Vector2(0, -32)
emitting = false
amount = 6
texture = ExtResource("3_8a6xh")
lifetime = 2.0
draw_order = 1
emission_shape = 1
emission_sphere_radius = 64.0
gravity = Vector2(0, 98)
color_ramp = SubResource("Gradient_bfbq1")

[node name="Weapons" type="Marker2D" parent="Visual" index="2"]
position = Vector2(32, 32)
gizmo_extents = 32.0

[node name="Light" type="Node" parent="Visual/Weapons" index="0"]

[node name="Heavy" type="Node" parent="Visual/Weapons" index="1"]

[node name="Support" type="Node" parent="Visual/Weapons" index="2"]

[node name="Melee" type="Node" parent="Visual/Weapons" index="3"]

[node name="Additional" type="Node" parent="Visual/Weapons" index="4"]

[node name="AudioListener2D" type="AudioListener2D" parent="." index="7"]

[node name="Minimap" type="Node2D" parent="." index="8"]

[node name="MinimapNotifier" type="VisibleOnScreenNotifier2D" parent="Minimap" index="0"]
rect = Rect2(-100, -100, 200, 200)

[node name="MinimapRemote" type="RemoteTransform2D" parent="Minimap" index="1"]
remote_path = NodePath("../MinimapMarker/Visual")
update_rotation = false
update_scale = false

[node name="MinimapMarker" type="Node" parent="Minimap" index="2"]

[node name="Visual" type="Sprite2D" parent="Minimap/MinimapMarker" index="0"]
visible = false
visibility_layer = 2
z_index = -7
scale = Vector2(10, 10)
texture = ExtResource("8_05q0u")

[node name="CameraTarget" type="Marker2D" parent="." index="9"]
gizmo_extents = 48.0

[connection signal="armed" from="." to="." method="_on_armed"]
[connection signal="disarmed" from="." to="." method="_on_disarmed"]
[connection signal="health_changed" from="." to="." method="_on_health_changed"]
[connection signal="screen_entered" from="Minimap/MinimapNotifier" to="Minimap/MinimapMarker/Visual" method="show"]
[connection signal="screen_exited" from="Minimap/MinimapNotifier" to="Minimap/MinimapMarker/Visual" method="hide"]
